--- a/esjs/Makefile.in
+++ b/esjs/Makefile.in
@@ -36,10 +36,10 @@ target_triplet = @target@
 bin_PROGRAMS = esjs$(EXEEXT)
 @POSIX_TRUE@noinst_PROGRAMS = valueptr$(EXEEXT)
 subdir = .
-DIST_COMMON = README $(am__configure_deps) $(srcdir)/Makefile.am \
-	$(srcdir)/Makefile.in $(top_srcdir)/configure COPYING \
-	config.guess config.sub depcomp install-sh lexer.cc missing \
-	parser.cc parser.h ylwrap
+DIST_COMMON = $(am__configure_deps) $(srcdir)/Makefile.am \
+	$(srcdir)/Makefile.in $(top_srcdir)/configure config.guess \
+	config.sub depcomp install-sh lexer.cc missing parser.cc \
+	parser.h ylwrap
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
