--- a/os/Makefile.in
+++ b/os/Makefile.in
@@ -170,7 +170,7 @@ target_os = @target_os@
 target_vendor = @target_vendor@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-SUBDIRS = libes++ bootsect kernel fs net .
+SUBDIRS = libes++ bootsect kernel fs net . testsuite
 all: all-recursive
 
 .SUFFIXES:
