--- a/os/configure.ac
+++ b/os/configure.ac
@@ -50,6 +50,6 @@ esac
 
 AM_CONDITIONAL(APPLE, test x$vendor_type = xapple)
 
-AC_CONFIG_FILES(Makefile libes++/Makefile libes++/testsuite/Makefile bootsect/Makefile net/Makefile net/testsuite/Makefile net/posix/Makefile fs/Makefile fs/fat/Makefile fs/fat/testsuite/Makefile fs/iso9660/Makefile fs/iso9660/testsuite/Makefile kernel/Makefile kernel/testsuite/Makefile)
+AC_CONFIG_FILES(Makefile libes++/Makefile libes++/testsuite/Makefile bootsect/Makefile net/Makefile net/testsuite/Makefile net/posix/Makefile fs/Makefile fs/fat/Makefile fs/fat/testsuite/Makefile fs/iso9660/Makefile fs/iso9660/testsuite/Makefile kernel/Makefile kernel/testsuite/Makefile testsuite/Makefile)
 
 AC_OUTPUT
